--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -1,1 +1,6 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+@charset "UTF-8";
+/* CSS Document */
+
+.sidepanel {
+    -fx-background-color: black;
+}
