--- a/src/gui/POMPOM.fxml
+++ b/src/gui/POMPOM.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="600.0" prefWidth="200.0" styleClass="split-pane">
          <children>
-            <Label layoutX="23.0" layoutY="64.0" text="Main" />
+            <Label layoutX="14.0" layoutY="60.0" text="Main" textFill="WHITE" />
          </children>
       </Pane>
       <ImageView fitHeight="60.0" fitWidth="171.0" layoutX="9.0">
