--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -30,6 +30,8 @@
 
 .label {
 	-fx-font-family:"Microsoft Yi Baiti";
+	-fx-font-size:16px;
+	-fx-font-text-fill: #d9d9d9;
 }
 
 .darkList {
@@ -64,7 +66,3 @@
     -fx-padding: 3 6 3 6;
 }
 
-.label {
-    -fx-text-fill: derive(master-color, -20%);
-    -fx-font-size: 12px;
-}
