--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -10,6 +10,10 @@
     -fx-background-color: black;
 }
 
+.menupane {
+	-fx-background-color: #1f1f1f;
+}
+
 
 .container {
     -fx-padding: 0 0 0 0;
