--- a/src/gui/POMPOM.fxml
+++ b/src/gui/POMPOM.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,12 +11,17 @@
    <children>
       <Pane prefHeight="600.0" prefWidth="200.0" styleClass="split-pane">
          <children>
+            <Pane layoutY="60.0" prefHeight="200.0" prefWidth="200.0" styleClass="menupane">
+               <children>
+                  <Button layoutY="21.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="307.0" styleClass="button-dashboad" />
+               </children>
+            </Pane>
             <Label layoutX="14.0" layoutY="60.0" text="Main" textFill="WHITE" />
          </children>
       </Pane>
-      <ImageView fitHeight="60.0" fitWidth="171.0" layoutX="9.0">
+      <ImageView fitHeight="60.0" fitWidth="171.0" layoutX="11.0">
          <image>
-            <Image url="@../../../logo.png" />
+            <Image url="@images/logo.png" />
          </image>
       </ImageView>
    </children>
