--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -14,6 +14,16 @@
 	-fx-background-color: #1f1f1f;
 }
 
+.button-dashboad{
+	-fx-background-color: #1f1f1f;
+	-fx-graphic:url(images/dashboard.png) no-repeat;
+}
+
+.button-dashboard:active {
+    -fx-graphic:url(images/dashboardClicked.png) no-repeat;
+	-fx-border-left:6px solid #ccc !important;
+	-fx-color:#000 !important;background-color:#e7ffff !important
+}
 
 .container {
     -fx-padding: 0 0 0 0;
@@ -25,11 +35,6 @@
 -fx-border-color: transparent -fx-base transparent -fx-base;
 -fx-background-color: transparent, derive(-fx-base,20%);
 -fx-background-insets: 0, 0 1 0 1;
-}
-
-
-.button {
-    
 }
 
 .label {
