--- a/bin/gui/application.css
+++ b/bin/gui/application.css
@@ -1,1 +1,54 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.menupane {
+	-fx-background-color: #1f1f1f;
+}
+
+.button-dashboad{
+	-fx-background-color: #1f1f1f;
+	-fx-graphic:url(images/dashboardClicked.png);
+}
+
+.container {
+    -fx-padding: 0 0 0 0;
+    -fx-border-width: 0;
+    -fx-background-color: black;
+}
+
+
+.label {
+	-fx-font-family:"Microsoft Yi Baiti";
+	-fx-font-size:16px;
+	-fx-font-text-fill: #d9d9d9;
+}
+
+.darkList {
+    -fx-background-color: derive(master-color, -60%);
+}
+
+.darkList .list-cell {
+    -fx-padding: 6 0 0 13;
+    -fx-background-color: derive(master-color, -60%);
+    -fx-text-fill: lightgrey;
+}
+
+.darkList .list-cell:focused {
+    -fx-text-fill: white;
+}
+
+.table-view {
+    -fx-border-width: 0;
+    -fx-border-color: red;
+}
+
+.text-area, .text-field {
+    -fx-background-radius: 4;
+    -fx-border-radius: 4;
+}
+
+.text-area {
+    -fx-padding: 2;
+}
+
+.text-field {
+    -fx-padding: 3 6 3 6;
+}
+
