--- a/src/gui/POMPOM.fxml
+++ b/src/gui/POMPOM.fxml
@@ -1,28 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Main">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="600.0" prefWidth="200.0" styleClass="menupane">
+      <Pane prefHeight="566.0" prefWidth="200.0" styleClass="container">
          <children>
-            <Pane layoutY="60.0" prefHeight="200.0" prefWidth="200.0" styleClass="menupane">
+            <Pane layoutY="66.0" prefHeight="236.0" prefWidth="200.0" styleClass="menupane">
                <children>
-                  <Button fx:id="fuckyou" layoutX="14.0" layoutY="29.0" mnemonicParsing="false" onAction="#hello" styleClass="button-dashboad" text="Button" />
+                  <Label layoutX="14.0" layoutY="4.0" text="Main" textFill="#d9d9d9" />
+                  <ImageView accessibleRole="BUTTON" fitHeight="32.0" fitWidth="200.0" layoutY="28.0" styleClass="button-clicked">
+                     <image>
+                        <Image url="@images/dashboardClicked.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="33.0" fitWidth="200.0" layoutY="60.0">
+                     <image>
+                        <Image url="@images/Calendar.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="33.0" fitWidth="200.0" layoutY="93.0">
+                     <image>
+                        <Image url="@images/Settings.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
-            <Label layoutX="14.0" layoutY="60.0" text="Main" textFill="WHITE" />
          </children>
       </Pane>
-      <ImageView fitHeight="60.0" fitWidth="171.0" layoutX="11.0">
+      <ImageView fitHeight="66.0" fitWidth="185.0" layoutX="3.0">
          <image>
             <Image url="@images/logo.png" />
          </image>
       </ImageView>
+      <Pane layoutX="200.0" prefHeight="566.0" prefWidth="598.0" styleClass="content">
+         <children>
+            <Label layoutX="14.0" layoutY="21.0" text="Dashboard" />
+            <TextField layoutX="14.0" layoutY="520.0" prefHeight="22.0" prefWidth="501.0" promptText="Enter Command:">
+               <font>
+                  <Font name="Tw Cen MT" size="14.0" />
+               </font>
+            </TextField>
+         </children>
+      </Pane>
    </children>
-</AnchorPane>
+</Pane>
