--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -2,9 +2,8 @@
 	-fx-background-color: #1f1f1f;
 }
 
-.button-dashboad{
-	-fx-background-color: #1f1f1f;
-	-fx-graphic:url(images/dashboardClicked.png);
+.button-clicked{
+	-fx-background-color: black;
 }
 
 .container {
@@ -13,12 +12,10 @@
     -fx-background-color: black;
 }
 
-
-.label {
-	-fx-font-family:"Microsoft Yi Baiti";
-	-fx-font-size:16px;
-	-fx-font-text-fill: #d9d9d9;
+.content{
+	-fx-background-color: #ebebeb;
 }
+
 
 .darkList {
     -fx-background-color: derive(master-color, -60%);
