--- a/src/gui/POMPOM.fxml
+++ b/src/gui/POMPOM.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -41,11 +44,25 @@
       <Pane layoutX="200.0" prefHeight="566.0" prefWidth="598.0" styleClass="content">
          <children>
             <Label layoutX="14.0" layoutY="21.0" text="Dashboard" />
-            <TextField layoutX="14.0" layoutY="520.0" prefHeight="22.0" prefWidth="501.0" promptText="Enter Command:">
-               <font>
-                  <Font name="Tw Cen MT" size="14.0" />
-               </font>
-            </TextField>
+            <AnchorPane layoutY="46.0" prefHeight="515.0" prefWidth="598.0">
+               <children>
+                  <TableView layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
+                    <columns>
+                        <TableColumn prefWidth="32.0" />
+                      <TableColumn prefWidth="52.0" text="ID" />
+                      <TableColumn prefWidth="159.0" text="Task" />
+                        <TableColumn prefWidth="104.0" text="Date" />
+                        <TableColumn prefWidth="103.0" text="Label" />
+                        <TableColumn prefWidth="113.0" text="Priority" />
+                    </columns>
+                  </TableView>
+                  <TextField layoutX="57.0" layoutY="442.0" prefHeight="22.0" prefWidth="501.0" promptText="Enter Command:">
+                     <font>
+                        <Font name="Tw Cen MT" size="14.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </AnchorPane>
          </children>
       </Pane>
    </children>
