--- a/bin/gui/POMPOM.fxml
+++ b/bin/gui/POMPOM.fxml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Main">
    <children>
       <Pane prefHeight="566.0" prefWidth="200.0" styleClass="container">
          <children>
             <Pane layoutY="66.0" prefHeight="236.0" prefWidth="200.0" styleClass="menupane">
                <children>
-                  <Label layoutX="14.0" layoutY="4.0" text="Main" textFill="#d9d9d9" />
+                  <Label layoutX="14.0" layoutY="4.0" text="Main" textFill="#d9d9d9">
+                     <font>
+                        <Font name="Microsoft Yi Baiti" size="18.0" />
+                     </font></Label>
                   <ImageView accessibleRole="BUTTON" fitHeight="32.0" fitWidth="200.0" layoutY="28.0" styleClass="button-clicked">
                      <image>
                         <Image url="@images/dashboardClicked.png" />
@@ -40,12 +48,38 @@
       </ImageView>
       <Pane layoutX="200.0" prefHeight="566.0" prefWidth="598.0" styleClass="content">
          <children>
-            <Label layoutX="14.0" layoutY="21.0" text="Dashboard" />
-            <TextField layoutX="14.0" layoutY="520.0" prefHeight="22.0" prefWidth="501.0" promptText="Enter Command:">
+            <Label layoutX="14.0" layoutY="21.0" text="Dashboard">
                <font>
-                  <Font name="Tw Cen MT" size="14.0" />
-               </font>
-            </TextField>
+                  <Font name="Tw Cen MT Bold" size="24.0" />
+               </font></Label>
+            <AnchorPane layoutY="46.0" prefHeight="515.0" prefWidth="598.0">
+               <children>
+                  <TableView layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
+                    <columns>
+                        <TableColumn prefWidth="32.0" />
+                      <TableColumn prefWidth="52.0" text="ID" />
+                      <TableColumn prefWidth="92.0" text="Task" />
+                        <TableColumn prefWidth="92.0" text="Date/Time" />
+                        <TableColumn prefWidth="91.0" text="Label" />
+                        <TableColumn prefWidth="111.0" text="Priority" />
+                        <TableColumn prefWidth="93.0" text="Status" />
+                    </columns>
+                  </TableView>
+                  <TextField layoutX="57.0" layoutY="442.0" prefHeight="22.0" prefWidth="501.0" promptText="Enter Command:">
+                     <font>
+                        <Font name="Tw Cen MT" size="14.0" />
+                     </font>
+                  </TextField>
+                  <HBox id="HBox" alignment="CENTER" layoutX="299.0" layoutY="-13.0" prefHeight="26.0" prefWidth="285.0" spacing="15.0">
+                     <children>
+                        <Button id="button1" fx:id="newIssue" text="New" />
+                        <Button id="button1" fx:id="saveIssue" text="Edit" />
+                        <Button mnemonicParsing="false" text="Save" />
+                        <Button id="button1" fx:id="deleteIssue" text="Delete" />
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
          </children>
       </Pane>
    </children>
