--- a/bin/gui/POMPOM.fxml
+++ b/bin/gui/POMPOM.fxml
@@ -54,9 +54,9 @@
                </font></Label>
             <AnchorPane layoutY="46.0" prefHeight="515.0" prefWidth="598.0">
                <children>
-                  <TableView layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
+                  <TableView fx:id="table" layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
                     <columns>
-                        <TableColumn fx:id="table" prefWidth="32.0" />
+                        <TableColumn prefWidth="32.0" />
                       <TableColumn fx:id="taskID" prefWidth="52.0" text="ID" />
                       <TableColumn fx:id="taskName" prefWidth="92.0" text="Task" />
                         <TableColumn fx:id="taskDateTime" prefWidth="92.0" text="Date/Time" />
