--- a/bin/gui/POMPOM.fxml
+++ b/bin/gui/POMPOM.fxml
@@ -13,26 +13,19 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import utils.CheckBoxCellFactory?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-	minWidth="-Infinity" prefHeight="566.0" prefWidth="800.0" stylesheets="@application.css"
-	xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="gui.Controller">
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="800.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
 	<children>
 		<Pane prefHeight="566.0" prefWidth="200.0" styleClass="container">
 			<children>
-				<Pane layoutY="66.0" prefHeight="236.0" prefWidth="200.0"
-					styleClass="menupane">
+				<Pane layoutY="66.0" prefHeight="365.0" prefWidth="200.0" styleClass="menupane">
 					<children>
 						<Label layoutX="14.0" layoutY="4.0" text="Main" textFill="#d9d9d9">
 							<font>
 								<Font name="Microsoft Yi Baiti" size="18.0" />
 							</font>
 						</Label>
-						<ImageView fx:id="dashBoard" accessibleRole="BUTTON"
-							fitHeight="32.0" fitWidth="200.0" layoutY="28.0" onMouseClicked="#toDashBoardView"
-							styleClass="button-clicked">
+						<ImageView fx:id="dashBoard" accessibleRole="BUTTON" fitHeight="32.0" fitWidth="200.0" layoutY="28.0" onMouseClicked="#toDashBoardView" styleClass="button-clicked">
 							<image>
 								<Image url="@images/dashboardClicked.png" />
 							</image>
@@ -42,12 +35,31 @@
 								<Image url="@images/Calendar.png" />
 							</image>
 						</ImageView>
-						<ImageView fx:id="settings" fitHeight="33.0" fitWidth="200.0"
-							layoutY="93.0" onMouseClicked="#toSettingsView">
+						<ImageView fx:id="settings" fitHeight="33.0" fitWidth="200.0" layoutY="93.0" onMouseClicked="#toSettingsView">
 							<image>
 								<Image url="@images/Settings.png" />
 							</image>
 						</ImageView>
+                  <Label layoutX="14.0" layoutY="139.0" text="Priority" textFill="#d9d9d9">
+                     <font>
+                        <Font name="Microsoft Yi Baiti" size="18.0" />
+                     </font>
+                  </Label>
+                  <ImageView fx:id="highPBtn" fitHeight="150.0" fitWidth="200.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#toHighPriorityView">
+                     <image>
+                        <Image url="@images/high.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="mediumPBtn" fitHeight="150.0" fitWidth="200.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#toMediumPriorityView">
+                     <image>
+                        <Image url="@images/medium.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="lowPBtn" fitHeight="150.0" fitWidth="200.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#toLowPriorityView">
+                     <image>
+                        <Image url="@images/low.png" />
+                     </image>
+                  </ImageView>
 					</children>
 				</Pane>
 			</children>
@@ -57,8 +69,7 @@
 				<Image url="@images/logo.png" />
 			</image>
 		</ImageView>
-		<Pane fx:id="content" layoutX="200.0" prefHeight="566.0"
-			prefWidth="598.0" styleClass="content">
+		<Pane fx:id="content" layoutX="200.0" prefHeight="566.0" prefWidth="598.0" styleClass="content">
 			<children>
 				<Label fx:id="label" layoutX="14.0" layoutY="21.0" text="Dashboard">
 					<font>
@@ -67,68 +78,45 @@
 				</Label>
 				<AnchorPane layoutY="46.0" prefHeight="515.0" prefWidth="598.0">
 					<children>
-						<TabPane fx:id="tabViews" layoutX="8.0" prefHeight="200.0"
-							prefWidth="349.0" tabClosingPolicy="UNAVAILABLE">
+						<TabPane fx:id="tabViews" layoutX="8.0" prefHeight="200.0" prefWidth="349.0" tabClosingPolicy="UNAVAILABLE">
 							<tabs>
-								<Tab fx:id="taskTab" onSelectionChanged="#taskTabAction"
-									text="Task" />
-								<Tab fx:id="completedTaskTab" onSelectionChanged="#completedTaskTabAction"
-									text="CompletedTask" />
-								<Tab fx:id="eventTab" onSelectionChanged="#eventTabAction"
-									text="Events" />
-								<Tab fx:id="completedEventTab" onSelectionChanged="#completedEventTabAction"
-									text="CompletedEvents" />
-								<Tab fx:id="searchTab" onSelectionChanged="#searchTabAction"
-									text="Search">
+								<Tab fx:id="taskTab" onSelectionChanged="#taskTabAction" text="Task" />
+								<Tab fx:id="completedTaskTab" onSelectionChanged="#completedTaskTabAction" text="CompletedTask" />
+								<Tab fx:id="eventTab" onSelectionChanged="#eventTabAction" text="Events" />
+								<Tab fx:id="completedEventTab" onSelectionChanged="#completedEventTabAction" text="CompletedEvents" />
+								<Tab fx:id="searchTab" onSelectionChanged="#searchTabAction" text="Search">
 									<content>
-										<AnchorPane minHeight="0.0" minWidth="0.0"
-											prefHeight="180.0" prefWidth="200.0" />
+										<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
 									</content>
 								</Tab>
 							</tabs>
 						</TabPane>
-						<TableView fx:id="table" layoutX="14.0" layoutY="32.0"
-							prefHeight="397.0" prefWidth="564.0">
-							<columns>
-								<TableColumn fx:id="checkBox" prefWidth="27.0" >
-								 <cellValueFactory> <PropertyValueFactory property="checked" 
-									/> </cellValueFactory> <cellFactory> <utils.CheckBoxCellFactory /> </cellFactory> 
-									</TableColumn> 
-								<TableColumn fx:id="taskID" prefWidth="33.0" text="ID" />
-								<TableColumn fx:id="taskName" prefWidth="69.0" text="Task" />
-								<TableColumn fx:id="taskStartDateTime" prefWidth="122.0"
-									text="Start Date / Time" />
-								<TableColumn fx:id="taskEndDateTime" prefWidth="102.0"
-									text="End Date/Time" />
-								<TableColumn fx:id="taskLabel" prefWidth="63.0"
-									text="Label" />
-								<TableColumn fx:id="taskPriority" maxWidth="83.0"
-									prefWidth="60.0" text="Priority" />
-								<TableColumn fx:id="taskStatus" prefWidth="87.0"
-									text="Status" />
-							</columns>
-						</TableView>
-						<TextField fx:id="inputCommand" layoutX="14.0" layoutY="442.0"
-							onKeyPressed="#enterCommandKey" prefHeight="22.0" prefWidth="501.0"
-							promptText="Command:">
+            <TableView fx:id="table" layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
+               <columns>
+                  <TableColumn fx:id="checkBox" prefWidth="37.0" />
+                  <TableColumn fx:id="taskID" prefWidth="38.0" text="ID" />
+                  <TableColumn fx:id="taskName" prefWidth="61.0" text="Task" />
+                  <TableColumn fx:id="taskStartDateTime" prefWidth="116.0" text="Start Date / Time" />
+                  <TableColumn fx:id="taskEndDateTime" prefWidth="110.0" text="End Date/Time" />
+                  <TableColumn fx:id="taskLabel" prefWidth="63.0" text="Label" />
+                  <TableColumn fx:id="taskPriority" maxWidth="83.0" prefWidth="67.0" text="Priority" />
+                  <TableColumn fx:id="taskStatus" prefWidth="71.0" text="Status" />
+               </columns>
+            </TableView>
+						<TextField fx:id="inputCommand" layoutX="14.0" layoutY="442.0" onKeyPressed="#enterCommandKey" prefHeight="22.0" prefWidth="501.0" promptText="Command:">
 							<font>
 								<Font name="Tw Cen MT" size="14.0" />
 							</font>
 						</TextField>
-						<HBox id="HBox" alignment="CENTER" layoutX="367.0" layoutY="-13.0"
-							prefHeight="26.0" prefWidth="217.0" spacing="15.0">
+						<HBox id="HBox" alignment="CENTER" layoutX="367.0" layoutY="-13.0" prefHeight="26.0" prefWidth="217.0" spacing="15.0">
 							<children>
-								<Button id="button1" fx:id="newTask" onAction="#newTaskFired"
-									text="New" />
+								<Button id="button1" fx:id="newTask" onAction="#newTaskFired" text="New" />
 								<Button id="button1" fx:id="editTask" text="Edit" />
-								<Button id="button1" fx:id="deleteTask" onAction="#deleteItems"
-									text="Delete" />
+								<Button id="button1" fx:id="deleteTask" onAction="#deleteItems" text="Delete" />
 							</children>
 						</HBox>
-						<Button fx:id="enterCommand" layoutX="526.0" layoutY="441.0"
-							mnemonicParsing="false" onAction="#enterCommandFired" text="Enter" />
-						<Label fx:id="returnMsg" layoutX="14.0" layoutY="476.0"
-							prefHeight="15.0" prefWidth="526.0">
+						<Button fx:id="enterCommand" layoutX="526.0" layoutY="441.0" mnemonicParsing="false" onAction="#enterCommandFired" text="Enter" />
+						<Label fx:id="returnMsg" layoutX="14.0" layoutY="476.0" prefHeight="15.0" prefWidth="526.0">
 							<font>
 								<Font name="Andale Mono" size="10.0" />
 							</font>
