--- a/src/gui/Dashboard.fxml
+++ b/src/gui/Dashboard.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="content" prefHeight="566.0" prefWidth="598.0" styleClass="content" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
+<Pane fx:id="content" prefHeight="566.0" prefWidth="661.0" styleClass="content" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainController">
    <children>
       <Label fx:id="label" layoutX="14.0" layoutY="21.0" text="Dashboard">
          <font>
             <Font name="Tw Cen MT Bold" size="24.0" />
          </font>
       </Label>
-      <AnchorPane layoutY="46.0" prefHeight="515.0" prefWidth="598.0">
+      <AnchorPane layoutY="46.0" prefHeight="515.0" prefWidth="660.0">
          <children>
             <TabPane fx:id="tabViews" layoutX="8.0" prefHeight="200.0" prefWidth="570.0" tabClosingPolicy="UNAVAILABLE">
                <tabs>
@@ -34,35 +34,35 @@
                   </Tab>
                </tabs>
             </TabPane>
-            <TableView fx:id="table" layoutX="14.0" layoutY="32.0" prefHeight="397.0" prefWidth="564.0">
+            <TableView fx:id="table" layoutX="14.0" layoutY="32.0" onMousePressed="#enableEditBtn" prefHeight="397.0" prefWidth="626.0">
                <columns>
-                  <TableColumn fx:id="checkBox" prefWidth="37.0" />
-                  <TableColumn fx:id="taskID" prefWidth="38.0" text="ID" />
-                  <TableColumn fx:id="taskName" prefWidth="61.0" text="Task" />
-                  <TableColumn fx:id="taskStartDateTime" prefWidth="116.0" text="Start Date / Time" />
-                  <TableColumn fx:id="taskEndDateTime" prefWidth="110.0" text="End Date/Time" />
-                  <TableColumn fx:id="taskLabel" prefWidth="63.0" text="Label" />
-                  <TableColumn fx:id="taskPriority" maxWidth="83.0" prefWidth="67.0" text="Priority" />
-                  <TableColumn fx:id="taskStatus" prefWidth="71.0" text="Status" />
+                  <TableColumn fx:id="checkBox" prefWidth="27.0" />
+                  <TableColumn fx:id="taskID" prefWidth="30.0" text="ID" />
+                  <TableColumn fx:id="taskName" prefWidth="96.0" text="Task" />
+                  <TableColumn fx:id="taskStartDateTime" prefWidth="130.0" text="Start Date / Time" />
+                  <TableColumn fx:id="taskEndDateTime" prefWidth="105.0" text="End Date/Time" />
+                  <TableColumn fx:id="taskLabel" prefWidth="54.0" text="Label" />
+                  <TableColumn fx:id="taskPriority" maxWidth="100.0" prefWidth="87.0" text="Priority" />
+                  <TableColumn fx:id="taskStatus" prefWidth="96.0" text="Status" />
                </columns>
             </TableView>
-            <TextField fx:id="inputCommand" layoutX="14.0" layoutY="442.0" onKeyPressed="#enterCommandKey" prefHeight="22.0" prefWidth="501.0" promptText="Command:">
+            <TextField fx:id="inputCommand" layoutX="14.0" layoutY="442.0" onKeyPressed="#enterCommandKey" prefHeight="23.0" prefWidth="570.0" promptText="Command:">
                <font>
                   <Font name="Tw Cen MT" size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="enterCommand" layoutX="526.0" layoutY="441.0" mnemonicParsing="false" onAction="#enterCommandFired" text="Enter" />
-            <Label fx:id="returnMsg" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="476.0" prefHeight="15.0" prefWidth="526.0" textAlignment="CENTER" textFill="#ff0101">
+            <Button fx:id="enterCommand" layoutX="595.0" layoutY="442.0" mnemonicParsing="false" onAction="#enterCommandFired" text="Enter" />
+            <Label fx:id="returnMsg" alignment="CENTER" contentDisplay="CENTER" layoutX="64.0" layoutY="477.0" prefHeight="15.0" prefWidth="526.0" textAlignment="CENTER" textFill="#ff0101">
                <font>
                   <Font name="Andale Mono" size="10.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <HBox id="HBox" alignment="CENTER" layoutX="367.0" layoutY="22.0" prefHeight="26.0" prefWidth="217.0" spacing="15.0">
+      <HBox id="HBox" alignment="CENTER" layoutX="451.0" layoutY="22.0" prefHeight="26.0" prefWidth="217.0" spacing="15.0">
          <children>
             <Button id="button1" fx:id="newTask" onAction="#newTaskFired" text="New" />
-            <Button id="button1" fx:id="editTask" text="Edit" />
+            <Button id="button1" fx:id="editTask" onAction="#editItem" text="Edit" />
             <Button id="button1" fx:id="deleteTask" onAction="#deleteItems" text="Delete" />
          </children>
       </HBox>
