--- a/src/gui/Settings.fxml
+++ b/src/gui/Settings.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
@@ -8,14 +9,24 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="317.0" prefWidth="406.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SettingsController">
    <children>
-      <Label layoutX="23.0" layoutY="66.0" text="Task Storage Location:" />
-      <TextField fx:id="storageLocationString" layoutX="170.0" layoutY="61.0" />
-      <Button fx:id="selectFile" layoutX="343.0" layoutY="61.0" mnemonicParsing="false" onAction="#showSingleFileChooser" text="Open.." />
-      <Button fx:id="saveFile" layoutX="112.0" layoutY="32.0" mnemonicParsing="false" onAction="#clickSave" text="Save" />
+      <Label layoutX="23.0" layoutY="246.0" text="Task Storage Location:" />
+      <TextField fx:id="storageLocationString" layoutX="170.0" layoutY="241.0" />
+      <Button fx:id="selectFile" layoutX="343.0" layoutY="241.0" mnemonicParsing="false" onAction="#showSingleFileChooser" text="Open.." />
+      <Button fx:id="saveFile" layoutX="348.0" layoutY="278.0" mnemonicParsing="false" onAction="#clickSave" text="Save" />
       <Label fx:id="label" layoutX="24.0" layoutY="31.0" text="Settings">
          <font>
             <Font name="Tw Cen MT Bold" size="24.0" />
          </font>
       </Label>
+      <Label layoutX="23.0" layoutY="69.0" text="Background Colour:" />
+      <ColorPicker fx:id="backgroundColour" layoutX="170.0" layoutY="65.0" />
+      <Label layoutX="23.0" layoutY="98.0" text="Tab Colour:" />
+      <ColorPicker fx:id="tabColour" layoutX="170.0" layoutY="94.0" />
+      <Label layoutX="23.0" layoutY="128.0" text="Button Colour:" />
+      <ColorPicker fx:id="buttonColour" layoutX="170.0" layoutY="124.0" />
+      <Label layoutX="23.0" layoutY="155.0" text="Odd Cell Colour:" />
+      <ColorPicker fx:id="oddCellColour" layoutX="170.0" layoutY="151.0" />
+      <Label layoutX="23.0" layoutY="185.0" text="Even Cell Colour:" />
+      <ColorPicker fx:id="evenCellColour" layoutX="170.0" layoutY="181.0" />
    </children>
 </Pane>
