--- a/src/gui/application.css
+++ b/src/gui/application.css
@@ -1,34 +1,15 @@
 .menupane {
-	-fx-background-color: #1f1f1f;
-}
-
-.button-clicked{
-	-fx-background-color: black;
+	-fx-background-color: #1d2a37;
 }
 
 .container {
     -fx-padding: 0 0 0 0;
     -fx-border-width: 0;
-    -fx-background-color: black;
+    -fx-background-color: #22313e;
 }
 
 .content{
-	-fx-background-color: #ebebeb;
-}
-
-
-.darkList {
-    -fx-background-color: derive(master-color, -60%);
-}
-
-.darkList .list-cell {
-    -fx-padding: 6 0 0 13;
-    -fx-background-color: derive(master-color, -60%);
-    -fx-text-fill: lightgrey;
-}
-
-.darkList .list-cell:focused {
-    -fx-text-fill: white;
+	-fx-background-color: #eff3f6;
 }
 
 .table-view {
@@ -61,20 +42,21 @@
 .tab{
     -fx-background-insets: 0 1 0 1,0,0;
 }
+
 .tab-pane .tab
 {
-    -fx-background-color: #e6e6e6;
+    -fx-background-color: #d3d3d3;
 
 }
 
 .tab-pane .tab:selected
 {
-    -fx-background-color: #3c3c3c;
+    -fx-background-color: #1d2a37;
 }
 
 .tab .tab-label { 
     -fx-alignment: CENTER;
-    -fx-text-fill: #828282;
+    -fx-text-fill: #eff3f6;
     -fx-font-size: 12px;
     -fx-font-weight: bold;
 }
@@ -84,50 +66,96 @@
     -fx-text-fill: white;
 }
 
-/*.table-view .column-header-background{
-    -fx-background-color: #3c3c3c;
+.table-view .column-header-background{
+    -fx-background-color: #f4f8fb;
 }
 
 .table-view .column-header-background .label{
     -fx-background-color: transparent;
-    -fx-text-fill: white;
+    -fx-text-fill:#313c4e;
 }
 
 .table-view .column-header {
     -fx-background-color: transparent;
 }
 
-.table-view .table-cell{
-    -fx-text-fill: white;
-}
 
 .table-row-cell{
-    -fx-background-color: -fx-table-cell-border-color, #616161;
+    -fx-background-color: -fx-table-cell-border-color, #ffffff;
     -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;  0 
+    -fx-table-cell-border-color: transparent;
+    -fx-text-fill: black;
+    -fx-padding: 0.0em;       
 }
 
 .table-row-cell:odd{
-    -fx-background-color: -fx-table-cell-border-color, #424242;
-    -fx-background-insets: 0, 0 0 1 0;
-    -fx-padding: 0.0em;  0   
+    -fx-background-color: -fx-table-cell-border-color, #f4f8fb;
+    -fx-table-cell-border-color: transparent;
+    -fx-background-insets: 0, 0 0 1 0;    
+    -fx-text-fill: black;
+    -fx-padding: 0.0em;     
 }
 
-.table-view > .virtual-flow > .scroll-bar:vertical,
-.table-view > .virtual-flow > .scroll-bar:vertical > .track,
-.table-view > .virtual-flow > .scroll-bar:vertical > .track-background, 
-.table-view > .virtual-flow > .scroll-bar:horizontal,
-.table-view > .virtual-flow > .scroll-bar:horizontal > .track,
-.table-view > .virtual-flow > .scroll-bar:horizontal > .track-background {
+.table-view:focused {
     -fx-background-color: transparent;
 }
 
+.table-view .table-column {
+  -fx-alignment: CENTER;
+}
 
-
-.table-view > .virtual-flow > .scroll-bar > .increment-button, 
-.table-view > .virtual-flow > .scroll-bar > .decrement-button {
-    -fx-opacity: 0;
+.table-row-cell:selected .table-cell {
+	    -fx-background-color: #313c4e;
+	    -fx-text-fill: white; 
+	    -fx-table-cell-border-color: transparent;
 }
 
 
-*/
+/* The main scrollbar **track** CSS class  */
+.table-view .scroll-bar:horizontal .track,
+.table-view .scroll-bar:vertical .track{
+    -fx-background-color:#f4f8fb;
+    -fx-border-color:#f4f8fb;
+    -fx-background-radius: 0em;
+    -fx-border-radius:2em;
+}
+
+/* The increment and decrement button CSS class of scrollbar */
+.table-view .scroll-bar:horizontal .increment-button ,
+.table-view .scroll-bar:horizontal .decrement-button {
+    -fx-background-color:transparent;
+    -fx-background-radius: 0em;
+    -fx-padding:0 0 10 0;
+}
+ 
+/* The increment and decrement button CSS class of scrollbar */
+.table-view .scroll-bar:vertical .increment-button ,
+.table-view .scroll-bar:vertical .decrement-button {
+    -fx-background-color:transparent;
+    -fx-background-radius: 0em;
+    -fx-padding:0 10 0 0;
+}
+ 
+.table-view  .scroll-bar .increment-arrow,
+.table-view  .scroll-bar .decrement-arrow{
+    -fx-shape: " ";
+    -fx-padding:0;
+}
+
+/* The main scrollbar **thumb** CSS class which we drag every time (movable) */
+.table-view .scroll-bar:horizontal .thumb,
+.table-view .scroll-bar:vertical .thumb{
+    -fx-background-color:#d3d3d3;
+    -fx-background-insets: 2, 0, 0;
+    -fx-background-radius: 2em;
+}
+
+.button{
+	-fx-background-color:linear-gradient(#3198d5,#1d2a37);
+	-fx-text-fill: white;
+	-fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+    -fx-font-size: 9pt;
+	
+}
+
+
